--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+html {
+    background-color: #222;
+}
+
 body {
     margin: 0;
     font-family: 'Press Start 2P', sans-serif;
@@ -23,8 +27,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-flow: column;
-    /*top: 200px;*/
+    flex-direction: column;
     width: 250px;
     height: 300px;
     visibility: hidden;
@@ -32,14 +35,16 @@ body {
 }
 
 #you-won {
-    width: 160px;
+    width: 250px;
 }
 
 #you-lose {
-    width: 160px;
+    width: 250px;
 }
 
 #restart {
+    position: absolute;
+    top: 50%;
     color: #fff;
     cursor: pointer;
     padding: 4px 8px;
@@ -56,8 +61,8 @@ body {
 
 .sound-container {
     position: absolute;
-    top: 500px;
-    left: 400px;
+    top: 90%;
+    left: 15%;
 }
 
 .sound-container img {
@@ -75,11 +80,13 @@ canvas {
     background-image: url('img/bg.jpg');
     display: block;
     border-radius: 5px;
+    width: 80%;
+    height: 100%;
 }
 
 .btn {
     cursor: pointer;
-    background-color: rgb(0, 0, 0);
+    background-color: #222;;
     border: none;
     padding: 10px 20px;
     color: #fff;
@@ -101,9 +108,10 @@ canvas {
 }
 
 .rules-btn {
+    background-color: #000;
     position: absolute;
-    top: 30px;
-    left: 30px;
+    top: 105%;
+    left: 'canvas.width/2';
     font-family: 'Press Start 2P', sans-serif;
 }
 
