--- a/styles.css
+++ b/styles.css
@@ -49,19 +49,19 @@ body {
     cursor: pointer;
     padding: 4px 8px;
     line-height: 1.5;
-    border: 1px solid #6198d8;
+    border: 1px solid #a214ff;
     border-radius: 5px;
     text-align: center;
     transition: .1s ease-in-out;
 }
 
 #restart:hover {
-    background-color: #6198d8;
+    background-color: #4a9fff;
 }
 
 .sound-container {
     position: absolute;
-    top: 85%;
+    top: 80%;
     left: 15%;
 }
 
@@ -77,7 +77,9 @@ body {
 }
 
 canvas {
-    background-image: url('img/bg.jpg');
+    background-image: url('img/img.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
     display: block;
     border-radius: 5px;
     width: 80%;
@@ -130,6 +132,7 @@ canvas {
     visibility: hidden;
     opacity: 0;
     transition: visibility .3s ease-in, opacity .3s ease-in;
+    z-index:2;
 }
 
 .rules.show {
